--- a/resources/style.css
+++ b/resources/style.css
@@ -14,3 +14,22 @@ body {
   color: aquamarine;
   font-size: 16px;
 }
+
+h1 {
+font-size: 50px;
+}
+
+h2 {
+  font-size: 42;
+  font-weight: 300;
+}
+
+p {
+font-size: 21px;
+color: gray;
+}
+
+.footer {
+color:gray;
+text-align: right;
+}
