--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Verdan, sans-serif;
+  font-family: Verdana, sans-serif;
   text-align: center;
   background-color: black;
   color: white;
@@ -33,3 +33,4 @@ color: gray;
 color:gray;
 text-align: right;
 }
+
