--- a/resources/style.css
+++ b/resources/style.css
@@ -17,10 +17,11 @@ body {
 
 h1 {
 font-size: 50px;
+font-weight: normal;
 }
 
 h2 {
-  font-size: 42;
+  font-size: 42px;
   font-weight: 300;
 }
 
@@ -33,4 +34,5 @@ color: gray;
 color:gray;
 text-align: right;
 }
+
 
